<resources>
    <string name="app_name">ParcialMoviles2018</string>
    <string name="parcial_moviles_2018">Parcial Moviles 2018</string>
    <string name="ejercicio_1">Ejercicio 1</string>
    <string name="ejercicio_2">Ejercicio 2</string>
    <string name="ejercicio_3">Ejercicio 3</string>
    <string name="ejercicio_4">Ejercicio 4</string>
    <string name="ejercicio_5">Ejercicio 5</string>
    <string name="alberto_luti">Alberto Luti</string>
    <string name="clickeame">Clickeame</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="datos_del_contacto">Datos del contacto</string>
    <string name="resultado_multiplicacion">Resultado multiplicacion</string>
    <string name="obtener_contacto">Obtener Contacto</string>
    <string name="ingresa_1er_numero">Ingresa 1er numero</string>
    <string name="ingresa_2do_numero">Ingresa 2do numero</string>
    <string name="realizar_producto">Realizar producto</string>
    <string name="comenzar">Comenzar</string>
    <string name="detener">Detener</string>
    <string name="resetear">Resetear</string>
    <string name="service">Service</string>
    <string name="intent_service">Intent Service</string>
    <string name="salida_del_boton_n_service">salida del boton   service</string>
    <string name="salida_del_boton_nintent_service">salida del boton  intent service</string>
</resources>
