<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/parcial_moviles_2018"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:id="@+id/btnExercise1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnExercise1Click"
            android:text="@string/ejercicio_1" />

        <Button
            android:id="@+id/btnExercise2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnExercise2Click"
            android:text="@string/ejercicio_2" />

        <Button
            android:id="@+id/btnExercise3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnExercise3Click"
            android:text="@string/ejercicio_3" />

        <Button
            android:id="@+id/btnExercise4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnExercise4Click"
            android:text="@string/ejercicio_4" />

        <Button
            android:id="@+id/btnExercise5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnExercise5Click"
            android:text="@string/ejercicio_5" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/alberto_luti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</android.support.constraint.ConstraintLayout>